--- a/Stratis.XUnitRetry/Stratis.XUnitRetry.csproj
+++ b/Stratis.XUnitRetry/Stratis.XUnitRetry.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
 
-    <IsPackable>false</IsPackable>
+    <IsPackable>true</IsPackable>
+
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
